--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "eslint": "^6.8.0",
