--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "stylelint": "^13.3.3",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.0.0"
+  },
+  "dependencies": {
+    "color-convert": "^2.0.1"
   }
 }
